--- a/apps/web/src/styles/reset.css
+++ b/apps/web/src/styles/reset.css
@@ -382,7 +382,7 @@ hr {
 /* 
  */
 
-/* .apple {
+.apple {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-family: var(--font-family-apple);
@@ -394,7 +394,7 @@ hr {
 
 .segoe {
   font-family: var(--font-family-segoe);
-} */
+}
 
 /*  */
 
