chore: next-auth

--- a/apps/web/src/styles/reset.css
+++ b/apps/web/src/styles/reset.css
@@ -1,3 +1,13 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
 #portal .system-fonts--body div {
   font-family: inherit;
 }
